TestRepo2/src/objects/NewsAndArticles__c.object
<CustomObject>
    <description>News and Articles object</description>
    <fields>
        <fullName>BodyText__c</fullName>
        <description>Article/News body</description>
        <label>Content text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Article/News title</description>
        <label>Title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>News&amp;Articles</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>BodyText__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A{00000000}</displayFormat>
        <label>Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News&amp;Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>